--- a/App/View/Pages/components/layout/navBar/index.html
+++ b/App/View/Pages/components/layout/navBar/index.html
@@ -1,9 +1,9 @@
 <nav class="menu">
     <div class="logo">
-        {{logo}}
+        <img src="{{URL_BASE}}/assets/img/opbuild.png" alt="{{logo}}">
     </div>
-    <div class="navigator">
-        <ul>
+    <div>
+        <ul class="navigator">
             <li><a href="#">lorem</a></li>
             <li><a href="#">lorem</a></li>
             <li><a href="#">lorem</a></li>
