--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,4 +11,16 @@
   height: 100px;
   padding: 0 var(--padding-screen);
   justify-content: space-between;
+  border-bottom: 1px solid rgb(0, 0, 0);
+  align-items: center;
+}
+.menu .navigator li{
+  list-style-type:none ;
+}
+.menu .navigator{
+  display: flex;
+  gap: 10px;
+}
+.menu .logo img{
+  max-width: 130px;
 }
