--- a/App/View/Pages/components/layout/navBar/index.html
+++ b/App/View/Pages/components/layout/navBar/index.html
@@ -1,13 +1,32 @@
-<nav class="menu">
-    <div class="logo">
-        <img src="{{URL_BASE}}/assets/img/opbuild.png" alt="{{logo}}">
-    </div>
-    <div>
-        <ul class="navigator">
-            <li><a href="#">lorem</a></li>
-            <li><a href="#">lorem</a></li>
-            <li><a href="#">lorem</a></li>
-            <li><a href="#">lorem</a></li>
+<header>
+    <nav class="nav-bar">
+        <div class="logo">
+            <h1>OP-BUILD</h1>
+        </div>
+        <div class="nav-list">
+            <ul>
+                <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Projetos</a></li>
+                <li class="nav-item"><a href="#" class="nav-link"> Sobre</a></li>
+            </ul>
+        </div>
+        <div class="login-button">
+            <button><a href="#">Entrar</a></button>
+        </div>
+
+        <div class="mobile-menu-icon">
+            <button onclick="menuShow()"><img class="icon" src="assets/img/menu_white_36dp.svg" alt=""></button>
+        </div>
+    </nav>
+    <div class="mobile-menu">
+        <ul>
+            <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Projetos</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
         </ul>
+
+        <div class="login-button">
+            <button><a href="#">Entrar</a></button>
+        </div>
     </div>
-</nav>
+</header>
