--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,50 +1,110 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&display=swap');
+* {
+    padding: 0;
+    margin: 0;
+    font-family: 'Inter', sans-serif;
 }
-:root{
-  --padding-screen: 100px;
+
+header {
+    background-color: #24252a;
+    box-shadow: 0px 3px 10px #464646;
 }
-.menu{
-  display: flex;
-  height: 124px;
-  padding: 0 var(--padding-screen);
-  justify-content: space-between;
-  border-bottom: 1px solid rgb(0, 0, 0);
-  align-items: center;
+
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem 6rem;
 }
-.menu .navigator li{
-  list-style-type:none ;
+
+.logo {
+    display: flex;
+    align-items: center;
 }
-.menu .navigator{
-  display: flex;
-  gap: 10px;
+
+.logo h1 {
+    color: #fff;
 }
-.menu .logo img{
-  max-width: 100%;
-  width: 100px;
-  height: 100px;
-  object-fit: contain;
+
+.nav-list {
+    display: flex;
+    align-items: center;
 }
-.forms {
-  display: flex;
-  padding: 50px var(--padding-screen);
+
+.nav-list ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
 }
-.forms .top a{
-  text-decoration: none;
+
+.nav-item {
+    margin: 0 15px;
 }
-.forms .top a button{
-  gap: 10px;
-  width: 160px;
-  height: 50px;
-  border-radius: 999px;
-  border: none;
-  cursor: pointer;
-  background-color: aqua;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 15px;
-  font-weight: bold;
+
+.nav-link {
+    text-decoration: none;
+    font-size: 1.15rem;
+    color: #fff;
+    font-weight: 400;
+}
+
+.login-button button {
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    background-color: #0187a7;
+}
+
+.login-button button a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: 500;
+    font-size: 1.1rem;
+}
+
+.mobile-menu-icon {
+    display: none;
+}
+
+.mobile-menu {
+    display: none;
+}
+
+@media screen and (max-width: 730px) {
+    .nav-bar {
+        padding: 1.5rem 4rem;
+    }
+    .nav-item {
+        display: none;
+    }
+    .login-button {
+        display: none;
+    }
+    .mobile-menu-icon {
+        display: block;
+    }
+    .mobile-menu-icon button {
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+    }
+    .mobile-menu ul {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 1rem;
+    }
+    .mobile-menu .nav-item {
+        display: block;
+        padding-top: 1.2rem;
+    }
+    .mobile-menu .login-button {
+        display: block;
+        padding: 1rem 2rem;
+    }
+    .mobile-menu .login-button button {
+        width: 100%;
+    }
+    .open {
+        display: block;
+    }
 }
