--- a/App/View/Pages/components/layout/navBar/index.html
+++ b/App/View/Pages/components/layout/navBar/index.html
@@ -1,7 +1,7 @@
 <header>
     <nav class="nav-bar">
         <div class="logo">
-            <h1>OP-BUILD</h1>
+            <h1>{{siteName}}</h1>
         </div>
         <div class="nav-list">
             <ul>
@@ -11,7 +11,7 @@
             </ul>
         </div>
         <div class="login-button">
-            <button><a href="#">Entrar</a></button>
+            <button><a href="login.php">Entrar</a></button>
         </div>
 
         <div class="mobile-menu-icon">
