--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,12 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
     font-family: 'Inter', sans-serif;
 }
-
+:root{
+  --padding-screen: 6rem;
+}
 header {
     background-color: #24252a;
     box-shadow: 0px 3px 10px #464646;
@@ -13,7 +16,7 @@ header {
 .nav-bar {
     display: flex;
     justify-content: space-between;
-    padding: 1.5rem 6rem;
+    padding: 1.5rem var(--padding-screen);
 }
 
 .logo {
@@ -68,43 +71,45 @@ header {
 .mobile-menu {
     display: none;
 }
-
-@media screen and (max-width: 730px) {
-    .nav-bar {
-        padding: 1.5rem 4rem;
-    }
-    .nav-item {
-        display: none;
-    }
-    .login-button {
-        display: none;
-    }
-    .mobile-menu-icon {
-        display: block;
-    }
-    .mobile-menu-icon button {
-        background-color: transparent;
-        border: none;
-        cursor: pointer;
-    }
-    .mobile-menu ul {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 1rem;
-    }
-    .mobile-menu .nav-item {
-        display: block;
-        padding-top: 1.2rem;
-    }
-    .mobile-menu .login-button {
-        display: block;
-        padding: 1rem 2rem;
-    }
-    .mobile-menu .login-button button {
-        width: 100%;
-    }
-    .open {
-        display: block;
-    }
+.menu{
+  display: flex;
+  height: 1px;
+  padding: 0 var(--padding-screen);
+  justify-content: space-between;
+  border-bottom: 1px solid rgb(0, 0, 0);
+  align-items: center;
+}
+.menu .navigator li{
+  list-style-type:none ;
+}
+.menu .navigator{
+  display: flex;
+  gap: 10px;
+}
+.menu .logo img{
+  max-width: 100%;
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+}
+.forms {
+  display: flex;
+  padding: 50px var(--padding-screen);
+}
+.forms .top a{
+  text-decoration: none;
+}
+.forms .top a button{
+  gap: 10px;
+  width: 160px;
+  height: 50px;
+  border-radius: 999px;
+  border: none;
+  cursor: pointer;
+  background-color: aqua;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  font-weight: bold;
 }
