--- a/App/View/Pages/login/components/form/index.html
+++ b/App/View/Pages/login/components/form/index.html
@@ -1,4 +1,29 @@
 <form class="login-form">
-    <input type="email" placeholder="email">
-    <input type="password" placeholder="email">
+    <h1>
+        Fazer Login
+    </h1>
+    <input type="email" placeholder="email" class="elements">
+    <input type="password" placeholder="senha" class="elements">
+    <button class="elements">
+        Entrar
+    </button>
+    <span class="alert">
+        Algum erro meu mano
+    </span>
+</form>
+
+<form class="login-form">
+    <h1>
+        Fazer Cadastro
+    </h1>
+    <input type="Nome" placeholder="Nome" class="elements">
+    <input type="email" placeholder="email" class="elements">
+    <input type="password" placeholder="Senha" class="elements">
+    <input type="password" placeholder="Senha" class="elements">
+    <button class="elements">
+        Cadastrar
+    </button>
+    <span class="alert">
+        Algum erro meu mano
+    </span>
 </form>
