--- a/App/View/Pages/login/index.html
+++ b/App/View/Pages/login/index.html
@@ -1,7 +1,7 @@
 <section class="forms">
     <div class="top">
         <a href="./">
-            <button>
+            <button class="back-button">
                 <i class='bx bx-arrow-back'></i>
                 Voltar
             </button>
