--- a/App/View/Pages/login/components/form/index.html
+++ b/App/View/Pages/login/components/form/index.html
@@ -1,29 +1,100 @@
-<form class="login-form">
-    <h1>
-        Fazer Login
-    </h1>
-    <input type="email" placeholder="email" class="elements">
-    <input type="password" placeholder="senha" class="elements">
-    <button class="elements">
-        Entrar
-    </button>
-    <span class="alert">
-        Algum erro meu mano
-    </span>
-</form>
-
-<form class="login-form">
-    <h1>
-        Fazer Cadastro
-    </h1>
-    <input type="Nome" placeholder="Nome" class="elements">
-    <input type="email" placeholder="email" class="elements">
-    <input type="password" placeholder="Senha" class="elements">
-    <input type="password" placeholder="Senha" class="elements">
-    <button class="elements">
-        Cadastrar
-    </button>
-    <span class="alert">
-        Algum erro meu mano
-    </span>
-</form>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+<div class="container">
+    <div class="content first-content">
+        <div class="first-column">
+            <h2 class="title title-primary">Bem Vindo!</h2>
+            <p class="description description-primary">Para manter-se conectado conosco</p>
+            <p class="description description-primary">faça o login com suas informações pessoais</p>
+            <button id="signin" class="btn btn-primary">entrar</button>
+        </div>    
+        <div class="second-column">
+            <h2 class="title title-second">criar conta</h2>
+            <div class="social-media">
+                <ul class="list-social-media">
+                    <a class="link-social-media" href="#">
+                        <li class="item-social-media">
+                            <i class="fab fa-facebook-f"></i>        
+                        </li>
+                    </a>
+                    <a class="link-social-media" href="#">
+                        <li class="item-social-media">
+                            <i class="fab fa-google-plus-g"></i>
+                        </li>
+                    </a>
+                    <a class="link-social-media" href="#">
+                        <li class="item-social-media">
+                            <i class="fab fa-linkedin-in"></i>
+                        </li>
+                    </a>
+                </ul>
+            </div><!-- social media -->
+            <p class="description description-second">ou use seu e-mail para se cadastrar:</p>
+            <form class="form">
+                <label class="label-input" for="">
+                    <i class="far fa-user icon-modify"></i>
+                    <input type="text" placeholder="Name">
+                </label>
+                
+                <label class="label-input" for="">
+                    <i class="far fa-envelope icon-modify"></i>
+                    <input type="email" placeholder="Email">
+                </label>
+                
+                <label class="label-input" for="">
+                    <i class="fas fa-lock icon-modify"></i>
+                    <input type="password" placeholder="Password">
+                </label>
+                
+                
+                <button class="btn btn-second">cadastrar</button>        
+            </form>
+        </div><!-- second column -->
+    </div><!-- first content -->
+    <div class="content second-content">
+        <div class="first-column">
+            <h2 class="title title-primary">Ola, aluno!</h2>
+            <p class="description description-primary">Insira seus dados pessoais</p>
+            <p class="description description-primary">e comece a jornada conosco</p>
+            <button id="signup" class="btn btn-primary">entrar</button>
+        </div>
+        <div class="second-column">
+            <h2 class="title title-second">sign in to developer</h2>
+            <div class="social-media">
+                <ul class="list-social-media">
+                    <a class="link-social-media" href="#">
+                        <li class="item-social-media">
+                            <i class="fab fa-facebook-f"></i>
+                        </li>
+                    </a>
+                    <a class="link-social-media" href="#">
+                        <li class="item-social-media">
+                            <i class="fab fa-google-plus-g"></i>
+                        </li>
+                    </a>
+                    <a class="link-social-media" href="#">
+                        <li class="item-social-media">
+                            <i class="fab fa-linkedin-in"></i>
+                        </li>
+                    </a>
+                </ul>
+            </div><!-- social media -->
+            <p class="description description-second">ou use sua conta de e-mail:</p>
+            <form class="form">
+            
+                <label class="label-input" for="">
+                    <i class="far fa-envelope icon-modify"></i>
+                    <input type="email" placeholder="Email">
+                </label>
+            
+                <label class="label-input" for="">
+                    <i class="fas fa-lock icon-modify"></i>
+                    <input type="password" placeholder="Password">
+                </label>
+            
+                <a class="password" href="#">Esqueceu sua senha?</a>
+                <button class="btn btn-second">entrar</button>
+            </form>
+        </div><!-- second column -->
+    </div><!-- second-content -->
+</div>
