--- a/App/View/Pages/components/layout/navBar/index.html
+++ b/App/View/Pages/components/layout/navBar/index.html
@@ -1,7 +1,7 @@
-<header>
-    <nav class="nav-bar">
+<nav class="menu">
+    <div class="left">
         <div class="logo">
-            <h1>{{siteName}}</h1>
+            <img src="{{URL_BASE}}/assets/img/opbuild/logo-nome-todo.png">
         </div>
         <div class="nav-list">
             <ul>
@@ -10,14 +10,18 @@
                 <li class="nav-item"><a href="#" class="nav-link"> Sobre</a></li>
             </ul>
         </div>
-        <div class="login-button">
-            <button><a href="login.php">Entrar</a></button>
-        </div>
-
-        <div class="mobile-menu-icon">
-            <button onclick="menuShow()"><img class="icon" src="assets/img/menu_white_36dp.svg" alt=""></button>
-        </div>
-    </nav>
+    </div>
+    <div class="login-button">
+        <a href="login.php">
+            <button>
+                INICIAR JORNADA
+            </button>
+        </a>
+    </div>
+    <div class="mobile-menu-icon">
+        <button onclick="menuShow()"><img class="icon" src="assets/img/menu_white_36dp.svg" alt=""></button>
+    </div>
+    
     <div class="mobile-menu">
         <ul>
             <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
@@ -29,4 +33,4 @@
             <button><a href="#">Entrar</a></button>
         </div>
     </div>
-</header>
+</nav>
