--- a/App/View/Pages/main/index.html
+++ b/App/View/Pages/main/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
-    <link rel="stylesheet" href="{{URL_BASE}}/assets/css/style.css">
-    <link rel="stylesheet" href="{{URL_BASE}}/assets/css/responsive.css">
+    {{styles}}
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
