--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,27 +6,39 @@
     font-family: 'Inter', sans-serif;
 }
 :root{
-  --padding-screen: 6rem;
+  --padding-screen: 100px;
   --max-width-screen:1325px;
+
+  --btn-color: #341ED3;
+  --background-elements-color: #0F0F0F;
+  --background-elements-color-opacity: #0f0f0fd8;
+
 }
-header {
-    background-color: #24252a;
-    box-shadow: 0px 3px 10px #464646;
+body{
+  background-color: black;
+}
+.menu{
+  background-color: var(--background-elements-color-opacity);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  padding: 1.5rem var(--padding-screen);
+
+  position: absolute;
+  width: 100%;
+  z-index: 33;
+
+  backdrop-filter: blur(5px);
+}
+.menu .left{
+  display: flex;
+  gap: 30px;
+  align-items: center;
 }
 
-.nav-bar {
-    display: flex;
-    justify-content: space-between;
-    padding: 1.5rem var(--padding-screen);
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-}
-
-.logo h1 {
-    color: #fff;
+.logo{
+  display: flex;
 }
 
 .nav-list {
@@ -46,21 +58,24 @@ header {
 
 .nav-link {
     text-decoration: none;
-    font-size: 1.15rem;
+    font-size: 17.85px;
     color: #fff;
     font-weight: 400;
 }
 
-.login-button button {
+.login-button a button {
     border: none;
-    padding: 10px 15px;
+    width: 165px;
+    height: 55px;
     border-radius: 5px;
-    background-color: #0187a7;
+    background-color:var(--btn-color);
+    color: white;
+    border-radius: 999px;
+    cursor: pointer;
 }
 
-.login-button button a {
+.login-button a {
     text-decoration: none;
-    color: #fff;
     font-weight: 500;
     font-size: 1.1rem;
 }
@@ -71,6 +86,82 @@ header {
 
 .mobile-menu {
     display: none;
+}
+
+header{
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  padding: 0 var(--padding-screen);
+  color: white;
+  justify-content: center;
+}
+header .video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: calc(100% - 3px);
+  z-index: -1;
+  opacity: 0.3;
+}
+header .video video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+header .content{
+  z-index: 2;
+  width: 100%;
+  max-width: var(--max-width-screen);
+}
+header .content .text{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+header .content .text h1{
+  max-width: 400px;
+}
+header .content .text p{
+  max-width: 550px;
+}
+header .content .text .hashtag{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+header .btns{
+  display: flex;
+  gap: 20px;
+}
+header .btns a{
+  text-decoration: none;
+}
+header .btns button{
+  width: 159.56px;
+  height: 55.36px;
+  border-radius: 999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+header .btns .ver{
+  background-color: var(--btn-color);
+  color: white;
+  fill: white;
+}
+header .btns .more{
+  background-color: var(--btn-color);
+  color: rgb(255, 255, 255);
+  background-color: transparent;
+  border: 3px solid rgb(255, 255, 255);
+  fill: rgb(255, 255, 255);
 }
 /*  Tela de Login  */ 
 
